# advent-of-code

./: .gitignore  .gitlab-ci.yml  README.md
2023/: README.md
2023/day01/: part1.py  part2.py
2023/day02/: part2.py
2023/day04/: part1.py  part2.py
2023/day05/: part1.py
2023/day06/: part1.py
2023/day07/: part2.py
2023/day08/: part1.py  part2.py
2023/day09/: part1.py  part2.py
2023/day11/: solve.py
2023/day_10/: solve.py
2023/day_12/: solve.py
2023/day_13/: solve.py
2023/day_14/: solve.py
2023/day_15/: solve.py
2023/day_5/: input  (+1 more)
2024/: README.md  go.mod  main.go
2025/: .flake8  .gitignore  README.md  pyproject.toml
2025/aoc/: client.py  core.py
2025/aoc/2025/: day01.py  day04.py  day06.py
2025/aoc/cmd/: client.py  common.py
2025/src/aoc/: cli.py  client.py  core.py
2025/src/aoc/cmd/: client.py  common.py  scaffold.py  solve.py
2025/src/aoc/days/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py
2025/tests/: test_all.py
day_1/: part1.py  part2.py
day_2/: part1.py
day_3/: part1.py
day_4/: part1.py  part2.py
day_5/: part1.py  part2.py
day_6/: part1.py
day_8/: part1.py  part2.py
day_9/: part1.py
python/: .gitignore  Makefile  README.md  pyproject.toml
python/2024/: day01.py
python/2025/: day01.py  day02.py  day03.py  day05.py  day06.py  day07.py  day08.py
python/aoc/: __main__.py  cli.py
python/aoc/cmd/: client.py  common.py  create.py  fetch.py  scaffold.py  solve.py
python/aoc/tools/: client.py  files.py  formatting.py  scaffold.py  testing.py
python/tests/: sample_cases.txt  test_all.py
(+26 files in other folders)
