[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "aoc"
description = "Advent of Code 2025 Solutions"
version = "1.0"
dependencies = ["beautifulsoup4>=4.14", "click>=8.0"]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["flake8", "pylint", "pytest", "pytest-cov", "pdm==2.26.2"]

[project.scripts]
aoc = "aoc.cli:main"

[tool.pdm.build]
package-dir = "src"

[tool.pylint.messages_control]
disable = ["missing-docstring"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = ["--strict-markers", "-v"]
