[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "aoc"
description = "Advent of Code"
version = "1.0"
dependencies = ["beautifulsoup4>=4.14", "click>=8.0", "pytz>=2025"]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["flake8", "pylint", "pytest", "pytest-cov", "pdm==2.26.2"]

[project.scripts]
aoc = "aoc.cli:main"

[tool.pylint.messages_control]
disable = ["missing-docstring"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--strict-markers", "-v"]
